--- a/shallow_water/Makefile
+++ b/shallow_water/Makefile
@@ -3,8 +3,7 @@ LIB_TAG =
 FC = gfortran
 FCFLAGS = -g -fcheck=bounds -Wall
 FCFLAGSPL = $(FCFLAGS) `pkg-config --cflags plplot$(LIB_TAG)-f95`
-LDFLAGS =
-#-llapack `pkg-config --libs plplot$(LIB_TAG)-f95`
+LDFLAGS = `pkg-config --libs plplot$(LIB_TAG)-f95`
 
 EXE = shallow_water
 all: $(EXE)
@@ -13,10 +12,10 @@ shallow_water.o: shallow_water_mo.o
 shallow_water: shallow_water_mo.o
 
 %.o: %.f90
-	$(FC) -c $(FCFLAGS) $<
+	$(FC) -c $(FCFLAGSPL) $<
 
 %.o: %.F90
-	$(FC) -c $(FCFLAGS) $<
+	$(FC) -c $(FCFLAGSPL) $<
 
 %: %.o
 	$(FC) $(FCFLAGS) -o $@ $^ $(LDFLAGS)
